server/vm-k8s/k8s/base/tapo-metrics/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tapo-metrics
spec:
  selector:
    app: tapo-metrics
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
