server/vm-k8s/k8s/base/tapo-metrics/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tapo-metrics
spec:
  rules:
  - host: "tapo.10.0.2.15.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tapo-metrics
            port:
              number: 80
  ingressClassName: public
